# img2jpg

./: .gitignore  .rustfmt.toml  1.avif  Cargo.toml  README.md  README.mdt  bun.lockb  dist.arm64.sh  dist.native.sh  index.d.ts  index.js  out.txt  package.json  patch.js
.github/workflows/: CI.yml
.yarn/releases/: yarn-3.5.1.cjs
coffee/: main.coffee
img/: rgb16.avif  rgb8.avif  rgba16.avif  rgba8.avif
npm/android-arm-eabi/: README.md  package.json
npm/android-arm64/: README.md  package.json
npm/darwin-arm64/: README.md  package.json
npm/darwin-universal/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/freebsd-x64/: README.md  package.json
npm/linux-arm-gnueabihf/: README.md  package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-arm64-musl/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/linux-x64-musl/: README.md  package.json
npm/win32-arm64-msvc/: README.md  package.json
npm/win32-ia32-msvc/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
sh/: jpegxl-rs.sh
src/: lib.rs
test/: main.mjs
