[package]
edition = "2021"
name = "w5_img2jpg"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.71"
aom-decode = "0.2.5"
napi-derive = "2.12.5"

[dependencies.image]
version = "0.24.6"
features = ["jpeg"]
default-features = false

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
opt-level = 3
incremental = true
codegen-units = 1
overflow-checks = false
panic = 'abort'
debug-assertions = false
strip = true

[dependencies.napi]
version = "2.12.6"
default-features = false
features = ["napi8", "error_anyhow"]
